--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,4 +1,6 @@
-* {
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
@@ -23,6 +25,15 @@ li {
 
 a {
   text-decoration: none;
+  color: inherit;
+}
+
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: inherit;
 }
 
 input[type="button"],
@@ -37,16 +48,30 @@ select:focus {
   outline: none;
 }
 
-/* Layout */
-/* Layout */
-@media screen and (min-width: 768px) {
+/* Devices sizes */
+/* Layout values */
+/* Devices sizes */
+/* Layout values */
+@media screen and (min-width: 0px) and (max-width: 767px) {
   .hide-for-mobile {
     display: none;
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 768px) and (max-width: 1439px) {
+  .hide-for-tablet {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 1440px) and (min-width: 4440px) {
   .hide-for-desktop {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 4440px) {
+  .hide-for-tablet-and-desktop {
     display: none;
   }
 }
@@ -65,8 +90,818 @@ select:focus {
   display: none;
 }
 
+/* Devices sizes */
+/* Layout values */
 html {
   font-family: 'Livvic', sans-serif;
   font-size: 15px;
+}
+
+button, a {
+  cursor: pointer;
+}
+
+.container {
+  max-width: 38.4rem;
+  margin: 0 auto;
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 66.133333rem;
+    margin: 0 auto;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .container {
+    max-width: 85.333333rem;
+    margin: 0 auto;
+  }
+}
+
+/* Devices sizes */
+/* Layout values */
+header {
+  background-color: #014E56;
+  padding: 3.2rem 1.6rem 0 1.6rem;
+}
+
+header nav {
+  max-width: 38.4rem;
+  margin: 0 auto;
+}
+
+header nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+header nav ul li.logo {
+  width: 8.533333rem;
+  height: 2.133333rem;
+}
+
+header nav ul li.icon-humberger {
+  width: 1.333333rem;
+  height: 1.133333rem;
+}
+
+@media screen and (min-width: 768px) {
+  header {
+    padding: 4.266666rem 2.666666rem 0 2.666666rem;
+  }
+  header nav {
+    max-width: 66.133333rem;
+  }
+  header nav ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  header nav li,
+  header nav button {
+    color: #FFF;
+  }
+  header nav ul li.logo {
+    margin-right: 3.2rem;
+  }
+  header nav li.home {
+    margin-right: 2.666666rem;
+  }
+  header nav li.about {
+    margin-right: 14.666666rem;
+  }
+  header nav li.contact-us > button {
+    background-color: transparent;
+    border: 2px solid #FFF;
+    font-weight: 600;
+    border-radius: 1.6rem;
+    font-size: 1.2rem;
+    line-height: 28px;
+    padding: 0.6rem 2.133333rem 0.733333rem 2.2rem;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  header {
+    padding: 4.866666rem 11rem 0 11rem !important;
+  }
+  header nav {
+    max-width: 85.333333rem;
+  }
+  header nav ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  header nav ul li.logo {
+    width: 10.666666rem;
+    height: 2.666666rem;
+    margin-right: 5.333333rem;
+  }
+  header nav li.home {
+    margin-right: 2.666666rem;
+  }
+  header nav li.about {
+    margin-right: 38.466666rem;
+  }
+  header nav * li.contact-us {
+    -ms-flex-item-align: end;
+        align-self: flex-end;
+  }
+  header nav li.contact-us > button {
+    background-color: transparent;
+    border: 2px solid #FFF;
+    font-weight: 600;
+    border-radius: 1.6rem;
+    font-size: 1.2rem;
+    line-height: 28px;
+    padding: 0.6rem 2.133333rem 0.733333rem 2.2rem;
+  }
+}
+
+footer {
+  color: #fff;
+  background-color: #002529;
+  padding: 4.4rem 1.6rem 4.266666rem 1.6rem;
+}
+
+footer .footer__container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+  -ms-grid-rows: (auto)[5];
+      grid-template-rows: repeat(5, auto);
+      grid-template-areas: "logo" "links" "address" "socials" "copyright";
+}
+
+footer .footer__container > img {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: logo;
+  width: 6.4rem;
+  height: 1.6rem;
+  margin: 0 auto;
+  margin-bottom: 1.6rem;
+}
+
+footer .footer__container .links {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  grid-area: links;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-bottom: 1.6rem;
+}
+
+footer .footer__container .links li {
+  font-weight: 600;
+}
+
+footer .footer__container .links li:first-child {
+  margin-right: 1.6rem;
+}
+
+footer .footer__container address {
+  -ms-grid-row: 3;
+  -ms-grid-column: 1;
+  grid-area: address;
+  text-align: center;
+  margin-bottom: 2.666666rem;
+}
+
+footer .footer__container address p {
+  font-style: normal;
+  opacity: 0.6;
+}
+
+footer .footer__container address > p:not(:nth-child(4)) {
+  margin-bottom: 1rem;
+}
+
+footer .footer__container .socials {
+  -ms-grid-row: 4;
+  -ms-grid-column: 1;
+  grid-area: socials;
+  text-align: center;
+}
+
+footer .footer__container .socials img {
+  margin-bottom: 1.066666rem;
+}
+
+footer .footer__container .socials img {
+  width: 1.6rem;
+  margin-right: 1.066666rem;
+}
+
+footer .footer__container .copyright {
+  -ms-grid-row: 5;
+  -ms-grid-column: 1;
+  grid-area: copyright;
+  text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+  footer {
+    padding: 3.733333rem 2.666666rem;
+  }
+  footer .footer__container {
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    -ms-grid-rows: (auto)[3];
+        grid-template-rows: repeat(3, auto);
+        grid-template-areas: "logo address" "links address" "socials copyright";
+  }
+  footer .footer__container > img {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+    grid-area: logo;
+    margin: 0 0 3.533333rem 0;
+  }
+  footer .footer__container .links {
+    -ms-grid-row: 2;
+    -ms-grid-column: 1;
+    grid-area: links;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    margin-bottom: 2.133333rem;
+  }
+  footer .footer__container .links li:first-child {
+    margin-right: 1.6rem;
+  }
+  footer .footer__container address {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 2;
+    -ms-grid-column: 2;
+    grid-area: address;
+    text-align: right;
+    margin-bottom: 2.266666rem;
+  }
+  footer .footer__container .socials {
+    -ms-grid-row: 3;
+    -ms-grid-column: 1;
+    grid-area: socials;
+    text-align: left;
+  }
+  footer .footer__container .socials img {
+    margin-bottom: unset;
+  }
+  footer .footer__container .copyright {
+    -ms-grid-row: 3;
+    -ms-grid-column: 2;
+    grid-area: copyright;
+    text-align: right;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  footer {
+    padding: 3.2rem 11rem;
+  }
+  footer .footer__container {
+    -ms-grid-columns: 19rem 38rem auto;
+        grid-template-columns: 19rem 38rem auto;
+    -ms-grid-rows: (auto)[2];
+        grid-template-rows: repeat(2, auto);
+        grid-template-areas: "logo address socials" "links address copyright";
+  }
+  footer .footer__container > img {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+    grid-area: logo;
+    margin-bottom: 1.666666rem;
+    width: 10.666666rem;
+    height: 2.666666rem;
+  }
+  footer .footer__container .links {
+    -ms-grid-row: 2;
+    -ms-grid-column: 1;
+    grid-area: links;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    margin-bottom: unset;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+  footer .footer__container .links li {
+    font-size: 1.2rem;
+  }
+  footer .footer__container .links li:first-child {
+    margin-right: 2.666666rem;
+  }
+  footer .footer__container address {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 2;
+    -ms-grid-column: 2;
+    grid-area: address;
+    text-align: left;
+    margin-bottom: unset;
+  }
+  footer .footer__container address > p:not(:nth-child(4)) {
+    margin-bottom: 0.866666rem;
+  }
+  footer .footer__container .socials {
+    -ms-grid-row: 1;
+    -ms-grid-column: 3;
+    grid-area: socials;
+    text-align: right;
+  }
+  footer .footer__container .socials img {
+    margin-bottom: unset;
+  }
+  footer .footer__container .copyright {
+    -ms-grid-row: 2;
+    -ms-grid-column: 3;
+    grid-area: copyright;
+    text-align: right;
+    -ms-flex-item-align: end;
+        align-self: flex-end;
+  }
+}
+
+/* Devices sizes */
+/* Layout values */
+#hero {
+  background-color: #014E56;
+  position: relative;
+  padding: 5.333333rem 1.6rem 13.133333rem 1.6rem;
+}
+
+#hero .bg-pattern-2 {
+  position: absolute;
+  bottom: 0;
+  -webkit-transform: translateX(50%);
+          transform: translateX(50%);
+  right: 50%;
+  width: auto;
+}
+
+#hero .hero__container h1,
+#hero .hero__container p {
+  color: #FFF;
+  text-align: center;
+}
+
+#hero .hero__container h1 {
+  font-weight: 800;
+  padding: 0 2.7rem;
+  font-size: 2.666666rem;
+  margin-bottom: 1.2rem;
+}
+
+#hero .hero__container h1 > span {
+  color: #F67E7E;
+}
+
+#hero .hero__container p {
+  line-height: 1.866666rem;
+  font-weight: 600;
+}
+
+@media screen and (min-width: 768px) {
+  #hero {
+    padding: 5.333333rem 1.6rem 17.066666rem 1.6rem;
+  }
+  #hero h1 {
+    padding: 0 11rem;
+    font-size: 4.266666rem;
+    margin-bottom: 1.6rem;
+  }
+  #hero p {
+    padding: 0 7rem;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  #hero {
+    padding: 8.6rem 11rem 16.666666rem 11rem;
+  }
+  #hero .bg-pattern-1 {
+    position: absolute;
+    left: -6.666666rem;
+    width: auto;
+  }
+  #hero .bg-pattern-2 {
+    position: absolute;
+    bottom: 0;
+    -webkit-transform: unset;
+            transform: unset;
+    right: 11rem;
+    width: auto;
+  }
+  #hero .hero__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: last baseline;
+        -ms-flex-align: last baseline;
+            align-items: last baseline;
+  }
+  #hero .hero__container h1,
+  #hero .hero__container p {
+    text-align: left;
+  }
+  #hero .hero__container h1 {
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    line-height: 6.666666rem;
+    padding: unset;
+    padding-right: 3rem;
+    margin-bottom: unset;
+    font-size: 6.666666rem;
+  }
+  #hero .hero__container p {
+    padding: unset;
+    width: 29.666666rem;
+    font-size: 1.2rem;
+    position: relative;
+  }
+  #hero .hero__container p::before {
+    position: absolute;
+    content: "";
+    width: 3.333333rem;
+    height: 0.266666rem;
+    top: -5.533333rem;
+    left: 0;
+    background-color: #79C8C7;
+  }
+}
+
+#features {
+  padding: 6.666666rem 1.6rem 4.266666rem 1.6rem;
+  background-color: #012F34;
+  position: relative;
+}
+
+#features .bg-pattern-3 {
+  position: absolute;
+  width: auto;
+  top: 0;
+  right: -6.666666rem;
+}
+
+#features .features__container h1,
+#features .features__container h3,
+#features .features__container p {
+  color: #fff;
+}
+
+#features .features__container h1 {
+  font-size: 2.133333rem;
+  line-height: 2.1333333rem;
+  font-weight: 700;
+  padding-right: 5.3rem;
+  position: relative;
+  margin-bottom: 3.733333rem;
+}
+
+#features .features__container h1::before {
+  position: absolute;
+  content: "";
+  width: 3.333333rem;
+  height: 0.266666rem;
+  top: -2.133333rem;
+  left: 0;
+  background-color: #F67E7E;
+}
+
+#features .features__container .feature {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+}
+
+#features .features__container .feature img {
+  width: auto;
+  margin-bottom: 1.066666rem;
+}
+
+#features .features__container .feature h3 {
+  font-weight: 700;
+  font-size: 1.2rem;
+  color: #F67E7E;
+  margin-bottom: 0.533333rem;
+}
+
+#features .features__container .feature p {
+  font-weight: 600;
+  line-height: 1.666666rem;
+}
+
+#features .features__container .feature:not(.feature:last-child) {
+  margin-bottom: 3.2rem;
+}
+
+@media screen and (min-width: 768px) {
+  #features {
+    padding: 9.066666rem 6.533333rem 6.666666rem 6.533333rem;
+    position: relative;
+  }
+  #features .features__container h1 {
+    position: relative;
+    margin-bottom: 4.266666rem;
+  }
+  #features .features__container .feature {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    text-align: left;
+  }
+  #features .features__container .feature:not(.feature:last-child) {
+    margin-bottom: 2.133333rem !important;
+  }
+  #features .features__container .feature img {
+    margin-bottom: unset;
+    margin-right: 1.533333rem;
+  }
+  #features .features__container .feature h3 {
+    margin-bottom: 1.066666rem;
+  }
+  #features .features__container .feature p {
+    padding-right: 0.5rem;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  #features {
+    padding: 9.333333rem 0 9.333333rem 11rem;
+  }
+  #features .bg-pattern-3 {
+    position: absolute;
+    width: auto;
+    top: unset;
+    bottom: 0;
+    right: -6.666666rem;
+  }
+  #features .features__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  #features .features__container h1 {
+    font-size: 3.2rem;
+    line-height: 3.2rem;
+    margin-bottom: unset;
+    width: 29.666666rem;
+    margin-right: 8.333333rem;
+    padding-right: unset;
+  }
+  #features .features__container h1::before {
+    top: -3.866666rem;
+  }
+  #features .features__container .feature {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    text-align: left;
+  }
+  #features .features__container .feature:not(.feature:last-child) {
+    margin-bottom: 2.133333rem !important;
+  }
+  #features .features__container .feature img {
+    margin-bottom: unset;
+    margin-right: 1.533333rem;
+  }
+  #features .features__container .feature h3 {
+    margin-bottom: 1.066666rem;
+  }
+  #features .features__container .feature p {
+    padding-right: 0.5rem;
+    width: 30rem;
+  }
+}
+
+/* Devices sizes */
+/* Layout values */
+#stories {
+  padding: 9.333333rem 1.6rem 10.933333rem 1.6rem;
+  background-color: #014E56;
+  position: relative;
+}
+
+#stories img.bg-square,
+#stories img.bg-circle {
+  width: auto;
+  position: absolute;
+}
+
+#stories img.bg-square {
+  top: 0;
+  left: 0;
+}
+
+#stories img.bg-circle {
+  bottom: 0;
+  right: 0;
+}
+
+#stories h2 {
+  color: #fff;
+  font-size: 2.133333rem;
+  font-weight: 700;
+  text-align: center;
+  margin-bottom: 5.6rem;
+}
+
+#stories h2 > span.succes {
+  color: #79C8C7;
+}
+
+#stories .stories-list .story {
+  position: relative;
+  z-index: 1;
+}
+
+#stories .stories-list .story > img.icon-quotes {
+  position: absolute;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  left: 50%;
+  top: -2.4rem;
+  z-index: -1;
+  width: auto;
+}
+
+#stories .stories-list .story > p {
+  color: #fff;
+  text-align: center;
+}
+
+#stories .stories-list .story > p.testimonial {
+  line-height: 1.666666rem;
+  margin-bottom: 1.066666rem;
+}
+
+#stories .stories-list .story > p.name {
+  font-weight: 700;
+  font-size: 1.2rem;
+  color: #79C8C7;
+  margin-bottom: 0.133333rem;
+}
+
+#stories .stories-list .story > p.position {
+  margin-bottom: 1.066666rem;
+  font-size: 0.866666rem;
+  font-weight: 500;
+  font-style: italic;
+}
+
+#stories .stories-list .story > img:not(.icon-quotes) {
+  width: 4.133333rem;
+  border-radius: 100%;
+  margin: 0 auto;
+  display: block;
+  border: 2px solid #C4FFFE;
+}
+
+#stories .stories-list .story:not(.story:last-child) {
+  margin-bottom: 5.6rem;
+}
+
+@media screen and (min-width: 768px) {
+  #stories {
+    padding: 6.666666rem 6.466666rem;
+  }
+  #stories h2 {
+    font-size: 2.133333rem;
+    padding: 0 3rem;
+  }
+  #stories .stories-list .story > p.testimonial {
+    padding: 0 0.3rem;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  #stories {
+    padding: 9.333333rem 11rem;
+  }
+  #stories h2 {
+    font-size: 3.2rem;
+    padding: 0 5.5rem;
+    margin-bottom: 6.133333rem;
+  }
+  #stories .stories-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  #stories .stories-list .story {
+    margin-bottom: unset;
+    padding: 0 1rem;
+  }
+  #stories .stories-list .story > p.testimonial {
+    margin-bottom: 1.6rem;
+  }
+  #stories .stories-list .story > p.position {
+    margin-bottom: 2.133333rem;
+  }
+}
+
+/* Devices sizes */
+/* Layout values */
+#contact {
+  background-color: #F67E7E;
+  padding: 5.533333rem 1.6rem;
+  position: relative;
+  z-index: 0;
+  overflow-y: hidden;
+}
+
+#contact .bg-pattern-6 {
+  position: absolute;
+  width: auto;
+  bottom: -1.5rem;
+  left: 0;
+  z-index: -1;
+}
+
+#contact .contact__container {
+  text-align: center;
+}
+
+#contact .contact__container h2 {
+  font-size: 2.133333rem;
+  font-weight: 700;
+  margin-bottom: 1.6rem;
+}
+
+#contact .contact__container button {
+  font-weight: 600;
+  font-size: 1.2rem;
+  line-height: 28px;
+  border-radius: 1.6rem;
+  border: 2px solid black;
+  background-color: transparent;
+  padding: 0.6rem 2.2rem 0.733333rem 2.133333rem;
+}
+
+@media screen and (min-width: 768px) {
+  #contact {
+    padding: 5.066666rem 6.466666rem;
+  }
+  #contact .contact__container {
+    text-align: left;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+  }
+  #contact .contact__container h2 {
+    margin-bottom: unset;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  #contact {
+    padding: 5.066666rem 17.333333rem;
+  }
+  #contact h2 {
+    font-size: 3.2rem !important;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
