--- a/sass/partials/_features.scss
+++ b/sass/partials/_features.scss
@@ -2,7 +2,7 @@
     padding: 6.666666rem 1.6rem 4.266666rem 1.6rem;
     background-color: $sacramento-state-green;
     position: relative;
-
+    overflow-x: clip;
     .bg-pattern-3 {
         position: absolute;
         width: auto;
