--- a/sass/partials/index/_stories.scss
+++ b/sass/partials/index/_stories.scss
@@ -1,5 +1,5 @@
-@import '../colors';
-@import '../variables';
+@import '../../colors';
+@import '../../variables';
 
 #stories {
     padding: 9.333333rem 1.6rem 10.933333rem 1.6rem;
