--- a/styles.scss
+++ b/styles.scss
@@ -19,3 +19,8 @@
 @import 'sass/partials/about/about';
 @import 'sass/partials/about/directores';
 @import 'sass/partials/about/clients';
+
+// Contact Partials 
+@import 'sass/partials/contact/main';
+@import 'sass/partials/contact/contact';
+@import 'sass/partials/contact/formulaire';
