--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -185,14 +185,16 @@ header nav ul li.icon-humberger {
   header nav li.about {
     margin-right: 14.666666rem;
   }
-  header nav li.contact-us > button {
-    background-color: transparent;
-    border: 2px solid #FFF;
+  header nav li.contact-us > a > button {
     font-weight: 600;
-    border-radius: 1.6rem;
     font-size: 1.2rem;
     line-height: 28px;
-    padding: 0.6rem 2.133333rem 0.733333rem 2.2rem;
+    border-radius: 1.6rem;
+    border: none;
+    padding: 0.6rem 2.2rem 0.733333rem 2.133333rem;
+    border: 2px solid #FFF;
+    background-color: transparent;
+    pointer-events: all;
   }
 }
 
@@ -222,15 +224,6 @@ header nav ul li.icon-humberger {
   header nav * li.contact-us {
     -ms-flex-item-align: end;
         align-self: flex-end;
-  }
-  header nav li.contact-us > button {
-    background-color: transparent;
-    border: 2px solid #FFF;
-    font-weight: 600;
-    border-radius: 1.6rem;
-    font-size: 1.2rem;
-    line-height: 28px;
-    padding: 0.6rem 2.133333rem 0.733333rem 2.2rem;
   }
 }
 
@@ -1505,6 +1498,237 @@ footer .footer__container .copyright {
   #clients .clients__container .logos > img.gadgets-now {
     width: 6.533333rem;
     height: 3rem;
+  }
+}
+
+#contact__main {
+  background-color: #014E56;
+  padding: 0 1.6rem 5.866666rem 1.6rem;
+  overflow: clip;
+  position: relative;
+}
+
+#contact__main .contact__main-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+@media screen and (min-width: 768px) {
+  #contact__main {
+    padding: 0 7.533333rem 0 7.533333rem;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  #contact__main {
+    padding: 8rem 11rem;
+  }
+  #contact__main .contact__main-container {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
+#contact {
+  overflow: clip;
+  background-color: #014E56;
+  /* padding: 5.333333rem 1.6rem 0 1.6rem; */
+  padding-left: 1.066666rem;
+}
+
+#contact .contact__text h1,
+#contact .contact__text h2 {
+  text-align: center;
+  font-weight: 700;
+}
+
+#contact .contact__text h1 {
+  color: #FFF;
+  font-size: 2.666666rem;
+  margin-bottom: 1.066666rem;
+}
+
+#contact .contact__text h2 {
+  color: #F67E7E;
+  font-size: 2.133333rem;
+  margin-bottom: 2.666666rem;
+}
+
+#contact .text__questions > div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 1.6rem;
+}
+
+#contact .text__questions > div > img {
+  width: 4.8rem;
+  height: 4.8rem;
+  margin-right: 1.533333rem;
+}
+
+#contact .text__questions > div > p {
+  font-size: 1.2rem;
+  color: #FFF;
+  font-weight: 700;
+  line-height: 1.866666rem;
+}
+
+@media screen and (min-width: 768px) {
+  #contact {
+    /* padding: 7.466666rem 8.466666rem 0 8.466666rem; */
+    position: unset;
+  }
+  #contact .bg-pattern-contact-1 {
+    position: absolute;
+    top: unset;
+    left: -6.666666rem;
+    width: auto;
+  }
+  #contact .contact__text h1,
+  #contact .contact__text h2 {
+    margin-bottom: 1.6rem;
+  }
+  #contact .contact__text h1 {
+    font-size: 4.266666rem;
+  }
+  #contact .contact__text h2 {
+    font-size: 2.133333rem;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  #contact {
+    padding: unset;
+    /* padding: 8rem 11rem 8rem 11re */
+    position: unset;
+    height: 29.333333rem;
+  }
+  #contact .bg-pattern-contact-1 {
+    position: absolute;
+    top: 8.266666rem;
+    left: -6.666666rem;
+    width: auto;
+  }
+  #contact .contact__text h1,
+  #contact .contact__text h2 {
+    text-align: left;
+  }
+  #contact .contact__text h1 {
+    font-size: 4.266666rem;
+  }
+  #contact .contact__text h2 {
+    font-size: 2.133333rem;
+    margin-bottom: 2.133333rem;
+  }
+  #contact .text__questions > div {
+    margin-bottom: 0.533333rem;
+  }
+  #contact .text__questions > div:last-child {
+    margin-bottom: 0;
+  }
+  #contact .text__questions > div > img {
+    margin-right: 1.533333rem;
+  }
+  #contact .text__questions > div > p {
+    font-size: 1.2rem;
+    color: #FFF;
+    font-weight: 700;
+    line-height: 1.866666rem;
+  }
+}
+
+#formulaire {
+  overflow: clip;
+  background-color: #014E56;
+  /* padding: 3.733333rem 1.6rem 5.866666rem 1.6rem; */
+  position: unset;
+}
+
+#formulaire .bg-pattern-contact-2 {
+  position: absolute;
+  bottom: -6.666666rem;
+  right: -6.666666rem;
+  width: auto;
+}
+
+#formulaire form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+#formulaire form .input {
+  border: none;
+  border-bottom: 1px solid #FFF;
+  background-color: transparent;
+  display: block;
+  color: #FFF;
+  margin-bottom: 1.6rem;
+  padding-bottom: 0.933333rem;
+  padding-left: 1.066666rem;
+  line-height: 25px;
+  font-weight: 600;
+}
+
+#formulaire form .message {
+  padding-bottom: 3.866666rem !important;
+  height: 5.6rem;
+}
+
+#formulaire form .form-cta > button {
+  font-weight: 600;
+  font-size: 1.2rem;
+  line-height: 28px;
+  border-radius: 1.6rem;
+  border: none;
+  padding: 0.6rem 2.2rem 0.733333rem 2.133333rem;
+}
+
+@media screen and (min-width: 768px) {
+  #formulaire {
+    /* padding: 4.266666rem 7.533333rem 7.466666rem 7.533333rem; */
+    padding: 4.266666rem 0 7.466666rem 0;
+  }
+  #formulaire .bg-pattern-contact-2 {
+    bottom: 0rem;
+  }
+  #formulaire form .input {
+    font-size: 1rem;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  #formulaire {
+    padding: unset;
+    position: unset;
+    width: 36.133333rem;
+  }
+  #formulaire .bg-pattern-contact-2 {
+    bottom: 0rem;
+  }
+  #formulaire form .input {
+    font-size: 1rem;
   }
 }
 /*# sourceMappingURL=styles.css.map */
