--- a/sass/partials/about/_clients.scss
+++ b/sass/partials/about/_clients.scss
@@ -2,6 +2,7 @@
     background-color: $sacramento-state-green;
     padding: 5.866666rem 1.6rem;
     position: relative;
+    overflow: clip;
     .bg-pattern-about-4 {
         position: absolute;
         top: -6.666666rem;
