--- a/sass/shared/header.scss
+++ b/sass/shared/header.scss
@@ -20,9 +20,10 @@ header {
             height: 2.133333rem; // 32px
         }
 
-        ul li.icon-humberger {
+        ul li.icon-hamburger {
             width: 1.333333rem; // 20px;
             height: 1.133333rem; // 17px
+            cursor: pointer;
         }
     }
 }
