--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -90,11 +90,21 @@ select:focus {
   display: none;
 }
 
+/** Aniamtion **/
+.slide-out {
+  right: -17rem;
+}
+
+.slide-in {
+  right: 0;
+}
+
 /* Devices sizes */
 /* Layout values */
 html {
   font-family: 'Livvic', sans-serif;
   font-size: 15px;
+  position: relative;
 }
 
 button, a {
@@ -118,6 +128,81 @@ button, a {
     max-width: 85.333333rem;
     margin: 0 auto;
   }
+}
+
+/* Devices sizes */
+/* Layout values */
+.modals-backdrop,
+.menu {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+}
+
+.modals-backdrop {
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 1;
+  left: 0;
+  right: 0;
+}
+
+.menu {
+  background-color: #2C6269;
+  z-index: 2;
+  width: 17rem;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 3.7323333rem 3.2rem;
+  overflow: clip;
+  -webkit-transition: right 300ms ease-in;
+  transition: right 300ms ease-in;
+}
+
+.menu .icon-close {
+  text-align: end;
+  margin-bottom: 2.6rem;
+  cursor: pointer;
+}
+
+.menu .icon-close > img {
+  width: 1.2rem;
+  height: 1.133333rem;
+}
+
+.menu ul {
+  margin-bottom: 2.4rem;
+}
+
+.menu ul > li {
+  font-size: 1.2rem;
+  line-height: 28px;
+  font-weight: 600;
+  color: #FFF;
+}
+
+.menu ul > li:first-child {
+  margin-bottom: 1.6rem;
+}
+
+.menu div.menu-cta > button {
+  font-weight: 600;
+  font-size: 1.2rem;
+  line-height: 28px;
+  border-radius: 1.6rem;
+  border: none;
+  padding: 0.6rem 2.2rem 0.733333rem 2.133333rem;
+  background-color: transparent;
+  border: 2px solid #FFF;
+  color: #FFF;
+}
+
+.menu img.bg-pattern-about-1-mobile-nav-1 {
+  position: absolute;
+  bottom: 0;
+  right: -6.666666rem;
+  width: auto;
 }
 
 /* Devices sizes */
@@ -149,9 +234,10 @@ header nav ul li.logo {
   height: 2.133333rem;
 }
 
-header nav ul li.icon-humberger {
+header nav ul li.icon-hamburger {
   width: 1.333333rem;
   height: 1.133333rem;
+  cursor: pointer;
 }
 
 @media screen and (min-width: 768px) {
@@ -1359,6 +1445,7 @@ footer .footer__container .copyright {
   background-color: #012F34;
   padding: 5.866666rem 1.6rem;
   position: relative;
+  overflow: clip;
 }
 
 #clients .bg-pattern-about-4 {
